--- a/src/RedisOnAzure/RedisOnAzure.Web/packages.config
+++ b/src/RedisOnAzure/RedisOnAzure.Web/packages.config
@@ -33,11 +33,13 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.Web.RedisSessionStateProvider" version="2.1.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="RedisRepo" version="1.1.6-beta" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="StackExchange.Redis" version="1.0.488" targetFramework="net461" />
+  <package id="StackExchange.Redis.StrongName" version="1.0.488" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
