--- a/src/RedisOnAzure/RedisOnAzure.Web/Web.config
+++ b/src/RedisOnAzure/RedisOnAzure.Web/Web.config
@@ -52,6 +52,13 @@
            preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <remove name="X-Powered-By" />
+        <!--<add name="Arr-Disable-Session-Affinity" value="true" />-->
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
