Refactored the UserCache class to hold all the logic for establishing index items which allowed me to delete the AppUserCacheExtensions.cs file.

--- a/src/RedisOnAzure/RedisOnAzure.Web/RedisOnAzure.Web.csproj
+++ b/src/RedisOnAzure/RedisOnAzure.Web/RedisOnAzure.Web.csproj
@@ -210,8 +210,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Common\AppConst.cs" />
-    <Compile Include="App_Common\AppUserCacheExtensions.cs" />
     <Compile Include="App_Common\StringExtensionMethods.cs" />
+    <Compile Include="App_Cache\UserCache.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
