--- a/src/RedisWithAspNet4_6.Web/Tests/Web/RedisWithAspNet4_6.Tests.Web.csproj
+++ b/src/RedisWithAspNet4_6.Web/Tests/Web/RedisWithAspNet4_6.Tests.Web.csproj
@@ -91,7 +91,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RedisWithAspNet4_6.Web\RedisWithAspNet4_6.Web.csproj">
+    <ProjectReference Include="..\..\RedisWithAspNet4_6.Web\RedisWithAspNet4_6.Web.csproj">
       <Project>{ACA3D484-9BDB-46CD-882C-7114B3DF12A3}</Project>
       <Name>RedisWithAspNet4_6.Web</Name>
     </ProjectReference>
