--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/packages.config
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/packages.config
@@ -15,5 +15,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
+  <package id="StackExchange.Redis" version="1.2.1" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
