--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web.csproj
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web.csproj
@@ -117,8 +117,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Core\AppConsts.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\RedisStartupConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Core\Commands\IMinionCommands.cs" />
     <Compile Include="App_Core\Commands\MinionCommands.cs" />
@@ -135,6 +137,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Core\ReadServices\IMinionsReadService.cs" />
     <Compile Include="App_Core\ReadServices\MinionsReadService.cs" />
+    <Compile Include="App_Core\RedisServices\RedisConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
