--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/packages.config
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/packages.config
@@ -12,9 +12,11 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
+  <package id="Microsoft.Web.RedisSessionStateProvider" version="2.2.3" targetFramework="net462" />
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
   <package id="StackExchange.Redis" version="1.2.1" targetFramework="net462" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
