Added some string extensions

--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web.csproj
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web.csproj
@@ -123,6 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Core\AppConsts.cs" />
+    <Compile Include="App_Core\Extensions\StringExtensions.cs" />
     <Compile Include="App_Core\RedisServices\IAppCache.cs" />
     <Compile Include="App_Core\RedisServices\RedisAppCache.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
