--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web.csproj
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web.csproj
@@ -168,7 +168,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
-    <Content Include="readme.txt" />
+    <Content Include="readme_RedisSessionStateProvider.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
