--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Web.config
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Web.config
@@ -9,15 +9,27 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SiteEnvironment" value="Local"/>
+    <add key="SiteEnvironment" value="Local" />
+    <!-- Values to hold for Redis Session State Provider of each site instance. Starup Code located in  -->
+    <add key="RedisHost" value="localhost" />
+    <add key="RedisPort" value="6379" />
+    <add key="RedisAccessKey" value="" />
+    <add key="RedisSsl" value="false" />
+    <add key="RedisDatabaseId" value="0" />
     <!-- REDIS -->
     <add key="RedisConnectionString" value="localhost,allowAdmin=true" />
+    <add key="RedisSiteInstance" value="Local" />
+    <add key="RefreshRedisSessionStateConfig" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
-    <httpModules>
-    </httpModules>
+    <httpModules></httpModules>
+    <sessionState mode="Custom" customProvider="RedisSessionProvider" stateNetworkTimeout="1200">
+      <providers>
+        <add name="RedisSessionProvider" type="Microsoft.Web.Redis.RedisSessionStateProvider" port="6379" host="localhost" accessKey="" ssl="false" databaseId="0" />
+      </providers>
+    </sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -48,6 +60,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="StackExchange.Redis.StrongName" publicKeyToken="c219ff1ca8c2ce46" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.1.0" newVersion="1.2.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
