Added header removal declarations in web.config

--- a/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Web.config
+++ b/src/RedisWithAspNet4_6.Web/RedisWithAspNet4_6.Web/Web.config
@@ -68,9 +68,15 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <remove name="X-Powered-By" />
+        <!--<add name="Arr-Disable-Session-Affinity" value="true" />  THIS SHOULD BE TAKEN CARE OF IN THE AZURE PORTAL-->
+      </customHeaders>
+    </httpProtocol>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
-    </modules>
+    <modules></modules>
   </system.webServer>
   <system.codedom>
     <compilers>
